Fixed floor label text spacing and made bold

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -205,6 +205,8 @@ div#side_buttons {
 }
 
 div#floor_label {
+  padding-top: 7px;
+  font-size: 2em;
   text-align: center;
   height: auto;
   font-family: sans-serif;
